crates/qfactors-macros/tests/ui/fail_alpha_return.rs
use qfactors_macros::alpha;

#[alpha]
fn bad() -> f64 {
    1.0
}

fn main() {}
